--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mantine/core": "^5.2.4",
     "@mantine/hooks": "^5.2.4",
     "@reduxjs/toolkit": "^1.8.5",
+    "@tabler/icons": "^1.92.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sanitize-html": "^2.7.1",
     "typescript": "^4.8.2"
   },
   "scripts": {
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/sanitize-html": "^2.6.2",
     "prettier": "^2.7.1"
   }
 }
