--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
 {
-    "tabWidth": 2,
-    "useTabs": true,
-    "printWidth": 100,
-    "semi": true,
-    "singleQuote": false
+	"tabWidth": 2,
+	"useTabs": true,
+	"printWidth": 100,
+	"semi": true,
+	"singleQuote": false,
+	"endOfLine": "crlf"
 }
